improve code to render the reading page + fix jumping around as images load

--- a/css/books.css
+++ b/css/books.css
@@ -1,6 +1,7 @@
 .book img {
     width: 16em;
     padding-right: 1em;
+    aspect-ratio: 256 / 393;
 }
 
 .book {
